<resources>
    <string name="app_name">BookedUp</string>
    <string name="prompt_email">Email address</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="prompt_register_email">Email address</string>
    <string name="prompt_register_firstname">First name</string>
    <string name="prompt_register_last_name">Last name</string>
    <string name="prompt_register_address">Address</string>
    <string name="prompt_register_phone">Mobile phone</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="action_continue_register">Continue register</string>
    <string name="prompt_forgot_email">Your email address</string>
    <string name="action_send_reset_link">Send reset link</string>
    <string name="language">Language</string>
    <string name="notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_existFirstName">Loren</string>
    <string name="prompt_existLastName">Smith</string>
    <string name="prompt_existAddress">St. Lorem Ipsum</string>
    <string name="prompt_existPhoneNumer">+381621734192</string>
    <string name="action_delete_account">Delete account</string>
    <string name="prompt_existPhoneNumber">+38162177492</string>
    <string name="action_log_out">Log out</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="availability_label">Availability: </string>
    <string name="prompt_register_country">Country</string>
    <string name="prompt_register_city">City</string>
    <string name="prompt_register_street_and_number">Street and number</string>
    <string name="oops">oops</string>
    <string name="location_disabled_message">disabled</string>
    <string name="sure">sure</string>
    <string name="no">no</string>
</resources>